--- a/amazingstore/src/Checkout.css
+++ b/amazingstore/src/Checkout.css
@@ -10,6 +10,10 @@
   margin-bottom: 10px;
 }
 
+.checkout_left {
+  margin-right: 10px;
+}
+
 .checkout_title {
   margin-right: 10px;
   padding: 10px;
