--- a/amazingstore/src/Product.css
+++ b/amazingstore/src/Product.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background-color: white;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin: 10px;
   padding: 20px;
   width: 100%;
