--- a/amazingstore/src/Checkout.css
+++ b/amazingstore/src/Checkout.css
@@ -5,6 +5,11 @@
   height: max-content;
 }
 
+.checkout_greeting {
+  margin-right: 10px;
+  padding: 10px;
+}
+
 .checkout_ad {
   width: 100%;
   height: fit-content;
